--- a/index.html
+++ b/index.html
@@ -2298,19 +2298,31 @@ Equip future healthcare professionals with the skills, ethics, and confidence to
 </a>
 </div>
 </section>
-<section aria-labelledby="quick-links" class="footer-section">
-<h3 id="quick-links">Quick Links</h3>
-<p>Academic Programs<br/>Admissions<br/>Faculty<br/>Research<br/>Campus Life</p>
-</section>
 <section aria-labelledby="contact-info" class="footer-section">
 <h3 id="contact-info">Contact Info</h3>
-<p>University of Sargodha<br/>Sargodha, Punjab, Pakistan<br/>Phone: <br/>Email: official.srcsmc@gmail.com</p>
+<p>Sargodha Medical College <br/>Sargodha, Punjab, Pakistan<br/>Phone: <br/>Email: official.srcsmc@gmail.com</p>
 </section>
 <section aria-labelledby="resources" class="footer-section">
 <h3 id="resources">Resources</h3>
 <p>Student Portal<br/>Faculty Portal<br/>Library<br/>Online Learning<br/>Career Services</p>
 </section>
 </div>
+    <footer class="site-footer">
+  <div class="footer-content">
+    <h2 class="footer-title">Send a Message</h2>
+    <form class="contact-form" action="#" method="post">
+      <div class="form-group">
+        <input type="text" name="name" placeholder="Your Name" required>
+      </div>
+      <div class="form-group">
+        <input type="email" name="email" placeholder="Your Email" required>
+      </div>
+      <div class="form-group">
+        <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+      </div>
+      <button type="submit" class="send-btn">Send Message</button>
+    </form>
+  </div>
 <div class="copyright">
 <!-- Updated copyright with designer credit -->
 <p>© 2025 SMC SRC. All Rights Reserved. Designed by <a href="https://portfolios-five-ivory.vercel.app/" rel="noopener noreferrer" style="color: var(--primary); text-decoration: none; font-weight: 600;" target="_blank">Hassan Farooq</a></p>
@@ -2322,7 +2334,6 @@ Equip future healthcare professionals with the skills, ethics, and confidence to
 <path d="M6 15l6-6 6 6" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
 </svg>
 </button>
-<div aria-hidden="true" class="mobile-menu" id="mobileMenu"></div>
 <script>
     let lastScroll = 0;
     const navbar = document.getElementById('navbar');
