--- a/index.html
+++ b/index.html
@@ -2082,6 +2082,67 @@
   outline: 3px solid color-mix(in srgb, var(--primary, #1e40af) 30%, white);
   outline-offset: 4px;
 }
+    /* Footer container */
+.site-footer {
+  background: #1e293b; /* dark slate background */
+  color: #fff;
+  padding: 2rem 1rem;
+  text-align: center;
+}
+
+.footer-content {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+/* Title */
+.footer-title {
+  font-size: 1.4rem;
+  margin-bottom: 1.5rem;
+  font-weight: 700;
+  color: #fff;
+}
+
+/* Form styles */
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 0.75rem 1rem;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+  box-sizing: border-box;
+}
+
+.form-group input:focus,
+.form-group textarea:focus {
+  outline: none;
+  border-color: #4f46e5; /* highlight color */
+  box-shadow: 0 0 0 3px rgba(79,70,229,0.3);
+}
+
+/* Button */
+.send-btn {
+  background: linear-gradient(180deg, #4f46e5, #4338ca);
+  color: #fff;
+  font-weight: 600;
+  padding: 0.75rem 1rem;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: transform 0.15s ease, box-shadow 0.15s ease;
+}
+
+.send-btn:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 6px 16px rgba(79,70,229,0.3);
+      }
     
 </style></head>
 <body>
