--- a/index.html
+++ b/index.html
@@ -2084,7 +2084,7 @@
 }
     /* Footer container */
 .site-footer {
-  background: #1e293b; /* dark slate background */
+  background: #000; /* dark slate background */
   color: #fff;
   padding: 2rem 1rem;
   text-align: center;
