--- a/index.html
+++ b/index.html
@@ -2359,31 +2359,50 @@ Equip future healthcare professionals with the skills, ethics, and confidence to
 </a>
 </div>
 </section>
-<section aria-labelledby="contact-info" class="footer-section">
-<h3 id="contact-info">Contact Info</h3>
-<p>Sargodha Medical College <br/>Sargodha, Punjab, Pakistan<br/>Phone: <br/>Email: official.srcsmc@gmail.com</p>
-</section>
-<section aria-labelledby="resources" class="footer-section">
-<h3 id="resources">Resources</h3>
-<p>Student Portal<br/>Faculty Portal<br/>Library<br/>Online Learning<br/>Career Services</p>
-</section>
-</div>
-    <footer class="site-footer">
-  <div class="footer-content">
-    <h2 class="footer-title">Send a Message</h2>
-    <form class="contact-form" action="#" method="post">
-      <div class="form-group">
+    
+<footer class="site-footer">
+  <div class="footer-container">
+    <!-- Column 1 -->
+    <div class="footer-col">
+      <h3>About</h3>
+      <p>Promoting innovation among medical students through mentorship, resources, and collaborative opportunities.</p>
+      <div class="socials">
+        <a href="#"><i class="fab fa-whatsapp"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+      </div>
+    </div>
+
+    <!-- Column 2 -->
+    <div class="footer-col">
+      <h3>Contact</h3>
+      <p>Email: official.srcsmc@gmail.com</p>
+    </div>
+
+    <!-- Column 3 -->
+    <div class="footer-col">
+      <h3>Resources</h3>
+      <ul>
+        <li><a href="#">Student Portal</a></li>
+        <li><a href="#">Faculty Portal</a></li>
+        <li><a href="#">Library</a></li>
+        <li><a href="#">Online Learning</a></li>
+        <li><a href="#">Career Services</a></li>
+      </ul>
+    </div>
+
+    <!-- Column 4 (Send a Message) -->
+    <div class="footer-col">
+      <h3>Send a Message</h3>
+      <form class="contact-form" action="#" method="post">
         <input type="text" name="name" placeholder="Your Name" required>
-      </div>
-      <div class="form-group">
         <input type="email" name="email" placeholder="Your Email" required>
-      </div>
-      <div class="form-group">
-        <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-      </div>
-      <button type="submit" class="send-btn">Send Message</button>
-    </form>
+        <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
+        <button type="submit" class="send-btn">Send Message</button>
+      </form>
+    </div>
   </div>
+</footer>
 <div class="copyright">
 <!-- Updated copyright with designer credit -->
 <p>© 2025 SMC SRC. All Rights Reserved. Designed by <a href="https://portfolios-five-ivory.vercel.app/" rel="noopener noreferrer" style="color: var(--primary); text-decoration: none; font-weight: 600;" target="_blank">Hassan Farooq</a></p>
