--- a/index.html
+++ b/index.html
@@ -2143,6 +2143,90 @@
   transform: translateY(-2px);
   box-shadow: 0 6px 16px rgba(79,70,229,0.3);
       }
+    .site-footer {
+  background: #000; /* black footer */
+  color: #fff;
+  padding: 3rem 1rem;
+}
+
+.footer-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 2rem;
+}
+
+/* Column style */
+.footer-col h3 {
+  margin-bottom: 1rem;
+  font-size: 1.1rem;
+  font-weight: 700;
+}
+
+.footer-col p,
+.footer-col ul,
+.footer-col li {
+  font-size: 0.95rem;
+  line-height: 1.5;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.footer-col ul li a {
+  color: #ccc;
+  text-decoration: none;
+}
+.footer-col ul li a:hover {
+  color: #fff;
+}
+
+/* Contact form */
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+
+.contact-form input,
+.contact-form textarea {
+  width: 100%;
+  padding: 0.7rem;
+  border-radius: 8px;
+  border: none;
+  font-size: 0.95rem;
+  box-sizing: border-box;
+}
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+  outline: none;
+  border: 2px solid #4f46e5;
+}
+
+.send-btn {
+  background: #4f46e5;
+  color: #fff;
+  border: none;
+  padding: 0.7rem;
+  border-radius: 8px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.send-btn:hover {
+  background: #4338ca;
+}
+
+/* Social icons */
+.socials a {
+  margin-right: 0.5rem;
+  font-size: 1.2rem;
+  color: #fff;
+  text-decoration: none;
+}
+.socials a:hover { color: #4f46e5; }
     
 </style></head>
 <body>
