--- a/index.html
+++ b/index.html
@@ -2227,6 +2227,68 @@
   text-decoration: none;
 }
 .socials a:hover { color: #4f46e5; }
+    /* Responsive grid for domains */
+.domains-grid {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 1.25rem;
+  align-items: start;
+  padding: 0.6rem 1rem;
+  box-sizing: border-box;
+}
+
+/* Domain card styling */
+.domain-card {
+  height: auto;
+  padding: 1.1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  border-radius: 14px;
+  box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.95), rgba(250, 250, 255, 0.9));
+  border: 1px solid rgba(17, 17, 17, 0.06);
+  transition: transform 0.2s ease;
+}
+
+.domain-card:hover {
+  transform: translateY(-6px);
+}
+
+.domain-card h3 {
+  margin: 0 0 0.6rem;
+  font-size: 1.15rem;
+  text-align: left;
+  color: var(--primary, #1e40af);
+  font-weight: 800;
+}
+
+.domain-card p {
+  margin: 0;
+  color: var(--ink-soft, #444);
+  font-size: 0.96rem;
+  line-height: 1.45;
+}
+
+/* Mobile: one column, no horizontal scroll */
+@media (max-width: 768px) {
+  .domains-grid {
+    grid-template-columns: 1fr;
+    padding: 0.6rem 0.9rem;
+    gap: 0.85rem;
+  }
+  .domain-card {
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
+  }
+  /* Disable any leftover horizontal scrolling */
+  body, html {
+    overflow-x: hidden !important;
+  }
+}
     
 </style></head>
 <body>
@@ -2443,50 +2505,52 @@ Equip future healthcare professionals with the skills, ethics, and confidence to
 </a>
 </div>
 </section>
-    
-<footer class="site-footer">
-  <div class="footer-container">
-    <!-- Column 1 -->
-    <div class="footer-col">
-      <h3>About</h3>
-      <p>Promoting innovation among medical students through mentorship, resources, and collaborative opportunities.</p>
-      <div class="socials">
-        <a href="#"><i class="fab fa-whatsapp"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
+    <footer class="site-footer">
+  <div class="footer-inner">
+    <!-- Column 1: About -->
+    <div class="footer-col footer-about">
+      <h4 class="footer-heading">About</h4>
+      <p class="footer-text">
+        Fostering a culture of research, innovation, and academic excellence.
+Equip future healthcare professionals with the skills, ethics, and confidence to lead impactful research in medicine and public health.
+      </p>
+      <div class="footer-socials" aria-label="social links">
+        <a href="#" class="social-link" aria-label="LinkedIn">IN</a>
+        <a href="#" class="social-link" aria-label="Instagram">IG</a>
       </div>
     </div>
 
-    <!-- Column 2 -->
-    <div class="footer-col">
-      <h3>Contact</h3>
-      <p>Email: official.srcsmc@gmail.com</p>
+    <!-- Column 2: Contact info -->
+    <div class="footer-col footer-contact">
+      <h4 class="footer-heading">Contact</h4>
+      <p class="footer-text"><strong>Email:</strong> <a href="mailto:official.srcsmc@gmail.com">official.srcsmc@gmail.com</a></p>
+      <p class="footer-text"><strong>Phone:</strong>(048) 9232004</p>
+      <p class="footer-text"><strong>Address:</strong>2P3F+H7J, Faisalabad Rd, Sargodha</p>
     </div>
 
-    <!-- Column 3 -->
-    <div class="footer-col">
-      <h3>Resources</h3>
-      <ul>
-        <li><a href="#">Student Portal</a></li>
-        <li><a href="#">Faculty Portal</a></li>
-        <li><a href="#">Library</a></li>
-        <li><a href="#">Online Learning</a></li>
-        <li><a href="#">Career Services</a></li>
-      </ul>
-    </div>
+    <!-- Column 3: Send a Message -->
+    <div class="footer-col footer-message">
+      <h4 class="footer-heading">Send a Message</h4>
+      <form class="footer-form" action="#" method="post" novalidate>
+        <label class="visually-hidden" for="footer-name">Your name</label>
+        <input id="footer-name" name="name" type="text" placeholder="Your name" required>
 
-    <!-- Column 4 (Send a Message) -->
-    <div class="footer-col">
-      <h3>Send a Message</h3>
-      <form class="contact-form" action="#" method="post">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
-        <button type="submit" class="send-btn">Send Message</button>
+        <label class="visually-hidden" for="footer-email">Your email</label>
+        <input id="footer-email" name="email" type="email" placeholder="Your email" required>
+
+        <label class="visually-hidden" for="footer-message">Your message</label>
+        <textarea id="footer-message" name="message" rows="4" placeholder="Your message" required></textarea>
+
+        <button type="submit" class="footer-send-btn">Send Message</button>
       </form>
     </div>
   </div>
-</footer>
+
+  <div class="footer-bottom">
+    <div class="footer-inner footer-bottom-inner">
+    </div>
+  </div>
+    </footer>
 <div class="copyright">
 <!-- Updated copyright with designer credit -->
 <p>© 2025 SMC SRC. All Rights Reserved. Designed by <a href="https://portfolios-five-ivory.vercel.app/" rel="noopener noreferrer" style="color: var(--primary); text-decoration: none; font-weight: 600;" target="_blank">Hassan Farooq</a></p>
