--- a/index.html
+++ b/index.html
@@ -2218,75 +2218,161 @@
 .send-btn:hover {
   background: #4338ca;
 }
-
-/* Social icons */
-.socials a {
-  margin-right: 0.5rem;
-  font-size: 1.2rem;
+/* ---------- Footer base ---------- */
+.site-footer {
+  background: #000;            /* dark background */
   color: #fff;
-  text-decoration: none;
-}
-.socials a:hover { color: #4f46e5; }
-    /* Responsive grid for domains */
-.domains-grid {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  gap: 1.25rem;
-  align-items: start;
-  padding: 0.6rem 1rem;
+  padding: 48px 16px;
+  font-family: inherit;
   box-sizing: border-box;
 }
 
-/* Domain card styling */
-.domain-card {
-  height: auto;
-  padding: 1.1rem;
+/* Outer content container (keeps width consistent with site) */
+.footer-inner {
+  max-width: 1200px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  padding: 0 12px;
+}
+
+/* Grid: 3 columns on desktop */
+.footer-inner {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 28px;
+  align-items: start; /* keep top alignment so form stays level with other boxes */
+}
+
+/* Column basics */
+.footer-col {
+  box-sizing: border-box;
+  text-align: left; /* left aligned like typical footers */
+}
+
+/* Headings and text */
+.footer-heading {
+  margin: 0 0 12px;
+  font-size: 1.05rem;
+  font-weight: 800;
+  color: #ffffff;
+}
+
+.footer-text {
+  margin: 0 0 10px;
+  color: #d1d5db; /* slightly muted white */
+  line-height: 1.55;
+  font-size: 0.98rem;
+}
+
+/* Social links (simple circular pills — swap with icons if available) */
+.footer-socials { margin-top: 12px; display:flex; gap:10px; }
+.social-link {
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  width:36px; height:36px;
+  border-radius:50%;
+  background: linear-gradient(180deg,#6d28d9,#5b21b6);
+  color:white;
+  text-decoration:none;
+  font-weight:700;
+  font-size:0.9rem;
+  box-shadow: 0 6px 18px rgba(99,102,241,0.12);
+}
+
+/* Contact links */
+.footer-contact a { color: #e6e6e6; text-decoration: none; }
+.footer-contact a:hover { text-decoration: underline; }
+
+/* ---------- Form styles (Send a Message) ---------- */
+.footer-form {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  border-radius: 14px;
-  box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.95), rgba(250, 250, 255, 0.9));
-  border: 1px solid rgba(17, 17, 17, 0.06);
-  transition: transform 0.2s ease;
+  gap: 10px;
+  margin-top: 4px;
 }
 
-.domain-card:hover {
-  transform: translateY(-6px);
+.footer-form input,
+.footer-form textarea {
+  width: 100%;
+  padding: 12px 14px;
+  border-radius: 8px;
+  border: 1px solid rgba(255,255,255,0.08);
+  background: rgba(255,255,255,0.03);
+  color: #fff;
+  font-size: 0.95rem;
+  box-sizing: border-box;
+  resize: vertical;
 }
 
-.domain-card h3 {
-  margin: 0 0 0.6rem;
-  font-size: 1.15rem;
-  text-align: left;
-  color: var(--primary, #1e40af);
-  font-weight: 800;
+/* Placeholder color for dark inputs */
+.footer-form input::placeholder,
+.footer-form textarea::placeholder {
+  color: rgba(255,255,255,0.65);
 }
 
-.domain-card p {
-  margin: 0;
-  color: var(--ink-soft, #444);
-  font-size: 0.96rem;
-  line-height: 1.45;
+/* Focus */
+.footer-form input:focus,
+.footer-form textarea:focus {
+  outline: none;
+  border-color: rgba(79,70,229,0.9);
+  box-shadow: 0 6px 18px rgba(79,70,229,0.12);
 }
 
-/* Mobile: one column, no horizontal scroll */
-@media (max-width: 768px) {
-  .domains-grid {
-    grid-template-columns: 1fr;
-    padding: 0.6rem 0.9rem;
-    gap: 0.85rem;
+/* Send button */
+.footer-send-btn {
+  background: linear-gradient(180deg, #4f46e5, #4338ca);
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  padding: 10px 14px;
+  font-weight: 700;
+  cursor: pointer;
+  transition: transform .14s ease, box-shadow .14s ease;
+}
+
+.footer-send-btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 22px rgba(67,56,202,0.16);
+}
+
+/* Footer bottom strip */
+.footer-bottom {
+  border-top: 1px solid rgba(255,255,255,0.04);
+  margin-top: 28px;
+  padding: 18px 0 4px;
+  color: #9ca3af;
+}
+
+.footer-bottom-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* small text */
+.small-note { margin: 0; font-size: 0.9rem; color:#9ca3af; }
+copyright { margin:0; }
+
+/* Accessibility helper: visually hidden labels */
+.visually-hidden {
+  position: absolute !important;
+  height: 1px; width: 1px;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
+  white-space: nowrap;
+  border: 0; padding: 0; margin: -1px;
+}
+
+/* ---------- Responsive: stack into a single column on narrow screens ---------- */
+@media (max-width: 900px) {
+  .footer-inner {
+    grid-template-columns: 1fr; /* stack vertically */
   }
-  .domain-card {
-    width: 100%;
-    max-width: 100%;
-    margin: 0;
-  }
-  /* Disable any leftover horizontal scrolling */
-  body, html {
-    overflow-x: hidden !important;
+  .footer-bottom-inner {
+    flex-direction: column;
+    gap: 8px;
+    text-align: center;
   }
 }
     
