--- a/index.html
+++ b/index.html
@@ -2436,7 +2436,7 @@ copyright { margin:0; }
     /* ---------- Footer layout ---------- */
 .site-footer {
   background: transparent; /* keep top area visually consistent if you want a background image / gradient */
-  color: #fff;
+  color: #000;
   font-family: inherit;
 }
 
