--- a/index.html
+++ b/index.html
@@ -2727,7 +2727,13 @@ copyright { margin:0; }
       <p>Organizes academic events, workshops, and conferences. Coordinates decor and event execution with volunteers. Showcases SRC’s work on broader academic platforms.</p>
     </article>
   </div>
+<!-- centralized apply button -->
+<div class="centralized-apply-container" aria-hidden="false">
+  <a href="/apply" class="centralized-apply-btn" role="button" aria-label="Apply Now">Apply Now</a>
+</div>
+
 </section>
+    
 <!-- Added Mission & Goals section with white background -->
 <section aria-labelledby="mission-title" class="section" id="mission" style="background: white; padding: 4rem 0;">
 <div class="container">
