--- a/index.html
+++ b/index.html
@@ -2729,7 +2729,7 @@ copyright { margin:0; }
   </div>
 <!-- centralized apply button -->
 <div class="centralized-apply-container" aria-hidden="false">
-  <a href="/apply" class="centralized-apply-btn" role="button" aria-label="Apply Now">Apply Now</a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeVqDs_Z0V3JNAXFUpVCz20n2dUU4bj-elLynT5ZoYs3DubBA/viewform?usp=header" class="centralized-apply-btn" role="button" aria-label="Apply Now">Apply Now</a>
 </div>
 
 </section>
